<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/numberZero"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/numberSeven"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberSeven"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/numberEight"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberEight"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberSeven"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/numberNine"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberNine"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberEight"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/numberFour"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberFour"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSeven" />

    <Button
        android:id="@+id/numberFive"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberFive"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberFour"
        app:layout_constraintTop_toBottomOf="@+id/numberEight" />

    <Button
        android:id="@+id/numberSix"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberSix"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberFive"
        app:layout_constraintTop_toBottomOf="@+id/numberNine" />

    <Button
        android:id="@+id/numberOne"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberOne"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberFour" />

    <Button
        android:id="@+id/numberTwo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberTwo"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberOne"
        app:layout_constraintTop_toBottomOf="@+id/numberFive" />

    <Button
        android:id="@+id/numberThree"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberThree"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberTwo"
        app:layout_constraintTop_toBottomOf="@+id/numberSix" />

    <Button
        android:id="@+id/numberZero"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberZero"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOne" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/numberNine"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/numberZero"
        app:layout_constraintTop_toBottomOf="@+id/numberTwo" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/numberSix"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/multiplication"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberThree"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/comma"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/numberThree" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/equal"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comma"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />

</androidx.constraintlayout.widget.ConstraintLayout>